tests/src/frontend/typechecking/invalid/method_generic_as_expression.sk
class C() {
  fun foo<T>(): void {
    _ = T;
    void
  }
}
